--- a/vignettes/psqi.Rmd
+++ b/vignettes/psqi.Rmd
@@ -50,5 +50,12 @@ Question 2 should be punched as minutes in numbers.
 - **Component 7: daytime dysfunction **- Sum of evaluation of staying awake (q 8) and evaluation of keeping enthusiastic (q 9), scaled to a 5 point scale.  
 - **Global score: sum of the above.** If any of the above is not possible to calculate, the global sum is also not calculated. 
 
+## Use the `psqi` functions
+All the functions necessary to compute the components and the global score for the psqi are included in this package, and loading it in your R-environment makes them accessable to you. All the functions for the PSQI, are prefixed with `psqi_`, so they are easy to find.
+
+There are a total of 7 `psqi_` functions in this package. One for each component, except 1 and 6 which are just the raw answers from questions 4 and 7. In addition, there is a function to calculate the global, which must be done _after_ having computed the 7 components. Lastly, there is a function `psqi_compute` which will do it all for you, compute all the components and the global. All the functions are documented as any function in R, and so you may call `?psqi_compute` to see the user documentation for the functions.
+
+There are many options you can utilise for these functions, so you may explore them as you wish. The functions are also made such that you can use them on datasets other than the LCBC MOAS dataset, but you will then have to specify the columns to use for the various components your self. The functions are made to work directly with the MOAS, and require no extra input other that the object containing the MOAS to run all calculations. Running `psqi_compute(MOAS)` will calculate all components and append them to the data you provided. Running `psqi_compute(MOAS, keep_all = FALSE)` will only return the computed components and the global score in a data frame.
+
 ## References  
 Buysse et al. (1989) [The Pittsburgh sleep quality index: A new instrument for psychiatric practice and research](https://www.sciencedirect.com/science/article/pii/0165178189900474), _Psychiatry Research_, 28:2, 193-213
