--- a/README.Rmd
+++ b/README.Rmd
@@ -13,7 +13,7 @@ knitr::opts_chunk$set(
 )
 ```
 
-# Questionnaires - LCBC-conversions <img src="man/figures/logo.png" align="right" alt="" width="120" />
+# LCBC Questionnaires <img src="man/figures/hex.png" align="right" alt="" width="120" />
 
 The repository contains functions to run coversions and calculate components from commonly used questionnaires in LCBC research. 
 
