--- a/README.Rmd
+++ b/README.Rmd
@@ -40,9 +40,9 @@ Vignettes are on their way, and so far there are only vignettes for PSQI and IPA
 
 As this package is in a private github repository, you need to do a couple of steps to install it. 
 
-First, install the packages `usethis` and `devtools`.
+First, install the packages `usethis` and `remotes`.
 ```
-install.packages(c("devtools", "usethis"))
+install.packages("usethis")
 ```
 
 Then, in github, create a Personal Access Token (PAT)  by going to Settings -> Developer Settings -> Personal Access Token -> Generate new access token.
@@ -58,6 +58,6 @@ Restart R (go to Session - Restart R in RStudio), and then you should be able to
 You can install the private version of Questionnaires from [GitHub](https://github.com/) with:
 
 ``` r
-# install.packages("devtools")
-devtools::install_github("LCBC-UiO/Questionnaires")
+# install.packages("remotes")
+remotes::install_github("LCBC-UiO/Questionnaires")
 ```
