--- a/vignettes/ipaq.Rmd
+++ b/vignettes/ipaq.Rmd
@@ -3,7 +3,7 @@ title: "International Physical Activity Questionnaire"
 date: "`r Sys.Date()`"
 output: rmarkdown::html_vignette
 vignette: >
-  %\VignetteIndexEntry{Vignette Title}
+  %\VignetteIndexEntry{International Physical Activity Questionnaire}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
