--- a/vignettes/psqi.Rmd
+++ b/vignettes/psqi.Rmd
@@ -3,7 +3,7 @@ title: "Pittsburgh Sleep Quality Inventory"
 date: "`r Sys.Date()`"
 output: rmarkdown::html_vignette
 vignette: >
-  %\VignetteIndexEntry{Vignette Title}
+  %\VignetteIndexEntry{Pittsburgh Sleep Quality Inventory}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
