ehi fixing and documentation

--- a/README.Rmd
+++ b/README.Rmd
@@ -28,7 +28,7 @@ The questionnaires covered so far:
 
 - PSQI - [Pittsburgh Sleep Quality Inventory](https://lcbc-uio.github.io/Questionnaires/articles/psqi.html)
 - IPAQ - [International Physical Activity Questionnaire](https://lcbc-uio.github.io/Questionnaires/articles/ipaq.html)
-- EHI - [Edinburgh Handedness Inventory (not documented yet)]
+- EHI - [Edinburgh Handedness Inventory](https://lcbc-uio.github.io/Questionnaires/articles/ehi.html)
 - BDI - [Beck Depression Inventory](https://lcbc-uio.github.io/Questionnaires/articles/bdi.html)
 - GDS - [Geriatric Depression Scale](https://lcbc-uio.github.io/Questionnaires/articles/gds.html)
 - EDU - [Education questions](https://lcbc-uio.github.io/Questionnaires/articles/edu.html)
