--- a/vignettes/gds.Rmd
+++ b/vignettes/gds.Rmd
@@ -1,5 +1,6 @@
 ---
 title: "Geriatric Depression Scale"
+subtitle: "Original version: Yesavage J A, 1983 - Norwegian version: Knut Engedal"
 output: rmarkdown::html_vignette
 vignette: >
   %\VignetteIndexEntry{gds}
@@ -19,13 +20,19 @@ devtools::load_all(".")
 
 
 ## Background
-The GDS is commonly used as a routine part of a Comprehensive Geriatric Assessment. One point is assigned to each answer and the cumulative score is rated on a scoring grid.
-The grid sets a range of 0-9 as "normal", 10-19 as "mildly depressed", and 20-30 as "severely depressed".
 
-A diagnosis of clinical depression should not be based on GDS results alone. 
-Although the test has well-established reliability and validity evaluated against other diagnostic criteria, responses should be considered along with results from a comprehensive diagnostic work-up. 
-A short version of the GDS (GDS-SF) containing 15 questions has been developed, and the scale is available in languages other than English. 
-The conducted research found the GDS-SF to be an adequate substitute for the original 30-item scale.
+The Geriatric Depression Scale (GDS) is an instrument designed specifically for rating depression in the elderly. 
+It can be administrated to healthy, medically ill, and mild to moderately cognitively impaired older adults. 
+As a general rule, GDS is administrated in LCBC to older adults with a lower cut off around 60 years. 
+However, please consult the instructions for each project, as this guideline has been implemented at different time points across the projects. 
+
+The questionnaire consists of 30 questions tapping into a wide variety of topics relevant to depression, including cognitive complaints, motivation, thoughts about the past and the future, self-image, and mood itself. 
+The answers should be based the participants' feelings throughout the last week. 
+
+Twenty of the questions indicate the presence of depression when answered positively, while the ten remaining indicate depression when answered negatively (see scoring instructions below). 
+The questionnaire is scored accordingly, giving one point for each statement that affirms a depressive symptom. 
+The sum of these scores yields one total score, with a possible range between 0 and 30.
+
 
 ## GDS scoring information
 The GDS is quite straight forward in its format, a series of 30 questions that take a yes or no answer. 
@@ -34,14 +41,21 @@ Several of the questions, however, are formulated in such a way that they requir
 The questions which require reversal of coding are, **01, 05, 07, 09, 15, 19, 21, 27, 29, 30**, meaning answering "yes" to these should be altered to 0, and "no" altered to 1, before calculating the sum score.
 The total GDS score is after reversal, a simple addition of all the answers into a single score.
 
+One point is given for any “No” answered to the following questions:  
+1, 5, 7, 9, 15, 19, 21, 27, 29 and 30
+
+and one point is given for every “Yes” answered on the following questions:  
+2, 3, 4, 6, 8, 10, 11, 12, 13, 14, 16, 17, 18, 20, 22, 23, 24, 25, 26, 28  
+
+### Depression categories
 There are 3 categories of severity for the GDS total score.
 Below or equal to `9` is "Normal", above 19 is "Severe depression", and the remaining fall within "Mild depression". 
 
-```
-gds_sum <= 9 ~ "Normal"
-gds_sum >= 10  & gds_sum <= 19 ~ "Mild depression"
-gds_sum > 19 ~ "Severe deppression"
-```
+|GDS score|Depression category|
+|---|---|
+|0-9|Normal|
+|10-19|Mild depressive|
+|20-30|Severe depressive|	      
 
 ## Data requirements
 ### Column naming
