--- a/vignettes/bdi.Rmd
+++ b/vignettes/bdi.Rmd
@@ -13,11 +13,10 @@ knitr::opts_chunk$set(
   eval = FALSE,
   comment = "#>"
 )
-
-devtools::load_all(".")
+options(rmarkdown.html_vignette.check_title = FALSE)
 ```
 
-```{r setup, eval=FALSE}
+```{r setup, eval = TRUE}
 library(Questionnaires)
 ```
 
@@ -32,15 +31,15 @@ The questionnaire consists of 21 statements, each reflecting a depression sympto
 The answers should be based the participant´s feelings throughout the last week, including the day of filling out the form. 
 The sum of the scores of the items (0-3) yields one total score, with a possible range between 0 and 62.
 
-**1:** Sadness  
-**2:** Pessimism  
-**3:** Past failure  
-**4:** Loss of pleasure  
-**5:** Guilty feelings  
-**6:** punishment feelings  
-**7:** Self-dislike  
-**8:** Self-criticalness  
-**9:** Suicidal thought or wishes*  
+**1:**  Sadness  
+**2:**  Pessimism  
+**3:**  Past failure  
+**4:**  Loss of pleasure  
+**5:**  Guilty feelings  
+**6:**  punishment feelings  
+**7:**  Self-dislike  
+**8:**  Self-criticalness  
+**9:**  Suicidal thought or wishes*  
 **10:** Crying  
 **11:** Agitation  
 **12:** Loss of interest  
@@ -78,7 +77,7 @@ If the participant scores 3 on this question ("_Jeg vil ta livet mitt om jeg fik
 
 ## Data requirements  
 ### Column names
-By default, the functions assume that columns have names in the manner of `BDI_XX` where `XX` is a zero-padded (i.e. zero in front of numbers belof 9, eg. `09`) question number of the inventory. 
+By default, the functions assume that columns have names in the manner of `bdi_XX` where `XX` is a zero-padded (i.e. zero in front of numbers belof 9, eg. `09`) question number of the inventory. 
 You may have column names in another format, but in that case you will need to supply to the functions the names of those columns using tidy-selectors (see the [tidyverse](https://www.tidyverse.org/) packages for this).
 The columns should adhere to some naming logic that is easy to specify.
 
@@ -122,10 +121,10 @@ otherData %>%
 
 # Base calculation on columns with names matching a regular expression
 otherData %>% 
-  bdi_compute_sum(cols = matches("BDI_[0-9][0-9]$"))
+  bdi_compute_sum(cols = matches("bdi_[0-9][0-9]$"))
 ```
 
-The funcion can be used within `dplyr:mutate` but requires the use of the special `.` to work, as it needs the entire data frame to do calculations.
+The function can be used within `dplyr:mutate` but requires the use of the special `.` to work, as it needs the entire data frame to do calculations.
 the `.` within a `mutate` (or other dplyr function) means "insert piped object in here", and thus the below example the entire `data` object is placed where the `.` is. 
 In this case, you would make a new column in the piped data called `bdi_sum`, 
 and using that column also create the factorised version in a column named `bdi_fact`.
@@ -134,12 +133,12 @@ and using that column also create the factorised version in a column named `bdi_
 ```{r}
 data %>% 
   mutate(
-    bdi_sum = bdi_compute_sum(., cols = matches("BDI_[0-9][0-9]$")),
+    bdi_sum = bdi_compute_sum(., cols = matches("bdi_[0-9][0-9]$")),
     bdi_fact = bdi_factorise(bdi_sum))
 ```
 
 This last part can also be done in a single step with the `bdi_compute` function.
-This function will return a data.frame with columnd `BDI` (the sum)  and `BDI_Coded` (the factor), based on the given data set. 
+This function will return a data.frame with columns `BDI` (the sum)  and `bdi_Coded` (the factor), based on the given data set. 
 By default, these two columns will be added to the end of the dataset provided, and use the default arguments to the two other bdi functions it calls. 
 
 ```{r}
@@ -156,12 +155,12 @@ data %>%
 Lastly, this function also takes a `predicate`, a logical statement (of length 1 or the number of rows of the data) for the calculation of the sum.
 For instance, in the MOAS, we do not have the single question answers for projects before nettskjema implementation.
 That means that we have a pre-calculated sum in the data, and the sum cannot be calculated based on single question data. 
-In this case, we use the predicate `!is.na(BDI_01)`, so that the `bdi_compute_sum` function is only run on data that actually has single question data.
+In this case, we use the predicate `!is.na(bdi_01)`, so that the `bdi_compute_sum` function is only run on data that actually has single question data.
 If we don't do this, the punched `BDI` score will be overwritten with `NA`. 
 
 ```{r}
 data %>% 
-  bdi_compute(predicate = !is.na(BDI_01))
+  bdi_compute(predicate = !is.na(bdi_01))
 ```
 
 ### Nettskjema special case
@@ -171,20 +170,20 @@ If data come from Nettskjema, the structure is in wide format, with each questio
 This function allows you to gather and create single columns for questions. 
 
 The columns must adhere to some specific logic to work.
-It is recommended that the column names are in  the format `BDI_01_2` `BDI_01_3`, where the first two numbers are the question number, and the last number is the option number.
+It is recommended that the column names are in  the format `bdi_01_2` `bdi_01_3`, where the first two numbers are the question number, and the last number is the option number.
 The `bdi_restructure` function transforms the last numbers in the column name a cell value, as this is the BDI score for that option, and then calculates the mean of all options _per question answered_. 
 
 ```{r, eval=TRUE}
 dat <- data.frame(
     ID = 1:4, 
-    BDI_01_0 = c(NA,1, NA, NA),
-    BDI_01_1 = c(1, NA, 1, NA),
-    BDI_01_2 = c(NA, NA, 1, NA),
-    BDI_01_3 = c(NA, NA, NA, NA),
-    BDI_02_0 = c(1, NA, NA, NA),
-    BDI_02_1 = c(NA,NA, NA, NA),
-    BDI_02_2 = c(NA,1, NA, NA),
-    BDI_02_3 = c(NA, NA, NA, 1)
+    bdi_01_0 = c(NA,1, NA, NA),
+    bdi_01_1 = c(1, NA, 1, NA),
+    bdi_01_2 = c(NA, NA, 1, NA),
+    bdi_01_3 = c(NA, NA, NA, NA),
+    bdi_02_0 = c(1, NA, NA, NA),
+    bdi_02_1 = c(NA,NA, NA, NA),
+    bdi_02_2 = c(NA,1, NA, NA),
+    bdi_02_3 = c(NA, NA, NA, 1)
   )
 
 dat
